# Programmentwurf

./: .clang-tidy  CMakeLists.txt  README.md  main.c  run_cmake.sh
.devcontainer/: devcontainer.json
.github/: clang_tidy_n_format.yml  create_slides.yml  slides_deploy.yml
.github/workflows/: build_and_test_code.yml
include/: developer.h  developer_group.h  functions.h
src/: developer.c  developer_group.c  functions.c  main.c
